# mDNSWindows

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docs.yml  release.yml  unit-tests.yml  windows-build.yml
mDNSWindows/: mDNSWin32.c
